# python_shared_memory_queue

./: .gitignore  LICENSE  README.md  pyproject.toml  realease.md  requirements.txt  requirements_testing.txt
memory/: __init__.py  convert.py  factory.py  receiver.py  sender.py
memory_test/: performance_test_base.py  performance_test_eval.ipynb  performance_test_smq.py  performance_test_smq_e2e.py  performance_test_standard.py  performance_test_standard_e2e.py  test_shared_memory.py  unittest_shared_memory.py
tests/: performance_comparison.py  performance_test_eval.ipynb  performance_test_smq.py  performance_test_standard.py  test_shared_memory.py
