[build-system]
requires = ['setuptools>=61.0', 'numpy>=1.26']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['memory']

[project]
name = "py-sharedmemory"
authors = [{name = "Tobias Würth"}]
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26"
]

description = "Shared Memory Pipe for Fast Multiprocessing Data Sharing of Large Objects (>1MB)"
keywords = ["python", "python3", "multiprocessing", "sharedmemory", "queue", "pipe"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/tobiaswuerth/python_shared_memory_queue"
"Bug Tracker" = "https://github.com/tobiaswuerth/python_shared_memory_queue/issues"
