[build-system]
requires = ['setuptools>=61.0', 'numpy>=1.26']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['memory']

[project]
name = "py-sharedmemory"
authors = [{name = "Tobias Würth"}]
version = "1.0.1"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26"
]

description = "A replacement for Python multiprocessing.Queue that moves data objects into shared memory as raw bytes and sends only minimal metadata between processes — reducing I/O bottlenecks and improving throughput for larger data objects (>1MB)."
keywords = ["python", "performance", "queue", "multiprocessing", "numpy", "zero-copy", "data-transfer", "low-latency", "inter-process-communication", "shared-memory", "high-throughput", "parallel-processing", "large-data", "memoryview"]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/tobiaswuerth/python_shared_memory_queue"
"Bug Tracker" = "https://github.com/tobiaswuerth/python_shared_memory_queue/issues"
