[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['memory']

[project]
name = "py-sharedmemory"
authors = [{name = "Tobias Würth"}]
version = "2.0.1"
requires-python = ">=3.9"
dependencies = []

description = "Optimized Python IPC: Uses shared memory to bypass multiprocessing queue I/O bottlenecks, ideal for large data (1MB+) in scientific computing, RL, etc. Reduces system load and improves latency consistency"
keywords = ["python", "performance", "queue", "multiprocessing", "numpy", "zero-copy", "data-transfer", "low-latency", "inter-process-communication", "shared-memory", "high-throughput", "parallel-processing", "large-data", "memoryview"]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/tobiaswuerth/python_shared_memory_queue"
"Bug Tracker" = "https://github.com/tobiaswuerth/python_shared_memory_queue/issues"
